Client: reorganización, limpieza y documentación

--- a/client/test/prueba.html
+++ b/client/test/prueba.html
@@ -1,3 +1,4 @@
+<!-- Cliente de prueba del autor de la implementación de WebSocket para PHP -->
 <html><head><title>WebSocket</title>
 <style type="text/css">
 html,body {
